@@ -28,7 +28,7 @@ function rv = mpver(varargin)
 v{1} = struct(  'Name',     'MATPOWER', ... 
                 'Version',  '5.1+', ...
                 'Release',  '', ...
-                'Date',     '16-Jul-2015' );
+                'Date',     '23-Sep-2015' );
 if nargout > 0
     if nargin > 0
         rv = v{1};
